cmake_minimum_required(VERSION 3.20)
project(paige)

set(SOURCES
    PGSOURCE/PGBASICS.C
    PGSOURCE/PGBOXES.C
	PGSOURCE/PGCLIPBD.C
	PGSOURCE/PGDEFPAR.C
	PGSOURCE/PGDEFSTL.C
	PGSOURCE/PGEDIT.C
	PGSOURCE/PGEMBED.C
	PGSOURCE/PGEXCEPS.C
	PGSOURCE/PGFILES.C
	PGSOURCE/PGFONTS.C
	PGSOURCE/PGGRAFX.C
	PGSOURCE/PGHTEXT.C
	PGSOURCE/PGINIT.C
	PGSOURCE/PGLINES.C
	PGSOURCE/PGLISTS.C
	PGSOURCE/PGMERGE.C
	PGSOURCE/PGNBOXES.C
	PGSOURCE/PGPAR.C
	PGSOURCE/PGPRINT.C
	PGSOURCE/PGREAD.C
	PGSOURCE/PGSCRIPT.C
	PGSOURCE/PGSCROLL.C
	PGSOURCE/PGSELECT.C
	PGSOURCE/PGSHAPES.C
	PGSOURCE/PGSTLSHT.C
	PGSOURCE/PGSTYLES.C
	PGSOURCE/PGSUBREF.C
	PGSOURCE/PGTABLES.C
	PGSOURCE/PGTABS.C
	PGSOURCE/PGTEXT.C
	PGSOURCE/PGTXR.C
	PGSOURCE/PGTXTBLK.C
	PGSOURCE/PGTXTUTL.C
	PGSOURCE/PGTXTWID.C
	PGSOURCE/PGUTILS.C
	PGSOURCE/PGWRITE.C

	PGPLATFO/PGWIN.C
	PGPLATFO/PGSCRAP.C
    PGPLATFO/PGOSUTL.C
    PGPLATFO/PGMEMMGR.C
	PGPLATFO/PGIO.C
    PGPLATFO/PGDLL32.C
	PGDEBUG/PGDEBUG.C
    )

add_library(paige ${SOURCES})
target_include_directories(paige
    PUBLIC
        PGHEADER)
if(WIN32)
    target_compile_definitions(paige
        PUBLIC
            WINDOWS_COMPILE
			_CRT_SECURE_NO_WARNINGS=1)
endif()